--- a/api/package.json
+++ b/api/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "json-server": "^0.12.1",
     "mongoose": "^4.13.6",
-    "json-server": "^0.12.1"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.4"
