--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "json-server": "^0.12.1",
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
